--- a/plugin/module-main/pom.xml
+++ b/plugin/module-main/pom.xml
@@ -1,6 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <groupId>de.intranda.goobi.plugins.step</groupId>
   <artifactId>bagcreation-main</artifactId>
+  <version>23.08</version>
   <properties>
     <jar.name>plugin_intranda_step_bagcreation</jar.name>
     <dest.folder>/opt/digiverso/goobi/plugins/step/</dest.folder>
