--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <relativePath />
   </parent>
   <groupId>io.goobi.workflow.plugin</groupId>
-  <artifactId>plugin-step-bagcreation</artifactId>
+  <artifactId>plugin-step-bag-creation</artifactId>
   <packaging>pom</packaging>
   <modules>
     <module>module-base</module>
