--- a/module-base/pom.xml
+++ b/module-base/pom.xml
@@ -7,4 +7,12 @@
   </parent>
   <artifactId>plugin-step-bag-creation-base</artifactId>
   <packaging>jar</packaging>
+  <dependencies>
+    <dependency>
+      <groupId>io.goobi.workflow.plugin</groupId>
+      <artifactId>plugin-administration-archive-management-lib</artifactId>
+      <version>25.04-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
+  </dependencies>
 </project>
