download json file from actapro

--- a/module-base/pom.xml
+++ b/module-base/pom.xml
@@ -14,5 +14,11 @@
       <version>25.04-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>io.goobi.workflow.plugin</groupId>
+      <artifactId>plugin-administration-actapro-sync-lib</artifactId>
+      <version>25.04-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>    
   </dependencies>
 </project>
