--- a/module-base/pom.xml
+++ b/module-base/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>io.goobi.workflow.plugin</groupId>
     <artifactId>plugin-step-bag-creation</artifactId>
-    <version>25.04-SNAPSHOT</version>
+    <version>25.04</version>
   </parent>
   <artifactId>plugin-step-bag-creation-base</artifactId>
   <packaging>jar</packaging>
@@ -11,13 +11,13 @@
     <dependency>
       <groupId>io.goobi.workflow.plugin</groupId>
       <artifactId>plugin-administration-archive-management-lib</artifactId>
-      <version>25.04-SNAPSHOT</version>
+      <version>25.04</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>io.goobi.workflow.plugin</groupId>
       <artifactId>plugin-administration-actapro-sync-lib</artifactId>
-      <version>25.04-SNAPSHOT</version>
+      <version>25.04</version>
       <scope>compile</scope>
     </dependency>    
   </dependencies>
