--- a/module-base/pom.xml
+++ b/module-base/pom.xml
@@ -12,13 +12,13 @@
     <dependency>
       <groupId>io.goobi.workflow.plugin</groupId>
       <artifactId>plugin-administration-archive-management-lib</artifactId>
-      <version>25.05-SNAPSHOT</version>
+      <version>25.05</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>io.goobi.workflow.plugin</groupId>
       <artifactId>plugin-administration-actapro-sync-lib</artifactId>
-      <version>25.05-SNAPSHOT</version>
+      <version>25.05</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
