--- a/module-base/pom.xml
+++ b/module-base/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.goobi.workflow.plugin</groupId>
     <artifactId>plugin-step-bag-creation</artifactId>
-    <version>25.09-SNAPSHOT</version>
+    <version>25.09</version>
   </parent>
   <artifactId>plugin-step-bag-creation-base</artifactId>
   <packaging>jar</packaging>
@@ -12,13 +12,13 @@
     <dependency>
       <groupId>io.goobi.workflow.plugin</groupId>
       <artifactId>plugin-administration-archive-management-lib</artifactId>
-      <version>25.09-SNAPSHOT</version>
+      <version>25.09</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>io.goobi.workflow.plugin</groupId>
       <artifactId>plugin-administration-actapro-sync-lib</artifactId>
-      <version>25.09-SNAPSHOT</version>
+      <version>25.09</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
